--- a/app/globals.css
+++ b/app/globals.css
@@ -1,42 +1,432 @@
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
 
 * {
   box-sizing: border-box;
+}
+
+html,
+body,
+#root {
+  width: 100%;
+  height: 100%;
+  margin: 0;
   padding: 0;
+}
+
+body {
+  font-family: "Poppins", sans-serif;
+  background-color: #111111;
+}
+
+/* ::-webkit-scrollbar {
+  width: 10px;
+} */
+/* ::-webkit-scrollbar-thumb {
+  background-color: #010100;
+}
+::-webkit-scrollbar-track {
+  background-color: #fefffe;
+} */
+
+/* COLORS */
+
+.white {
+  color: #fefffe;
+}
+
+.black {
+  color: #010100;
+}
+
+.blue-background {
+  background-color: #e5fbff80;
+}
+.purple-background {
+  background-color: #ebe5ff80;
+}
+.yellow-background {
+  background-color: #fcffe580;
+}
+.red-background {
+  background-color: #ffe5ec80;
+}
+
+/* TEXTS */
+
+.headline {
+  font-size: 7.5vw;
+  margin: 0;
+  font-weight: 600;
+  line-height: 75%;
+}
+
+.subheadline {
+  font-size: 4.5vw;
+  margin: 0;
+  font-weight: 400;
+  line-height: 100%;
+}
+
+.headline-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.headline-container-text {
+  height: fit-content;
+  width: fit-content;
+  overflow: hidden;
+}
+.headline-container-text h1 {
+  font-size: 3.75vw;
+  margin: 0;
+  font-weight: 400;
+  line-height: 110%;
+}
+
+.small-subheadline {
+  font-size: 3.75vw;
+  margin: 0;
+  font-weight: 400;
+  line-height: 110%;
+}
+
+.big-description {
+  font-size: 2.5vw;
+  font-weight: 400;
+  margin: 0;
+  line-height: 100%;
+}
+
+.description {
+  font-size: 1.25vw;
+  font-weight: 400;
   margin: 0;
 }
 
-a {
-  color: inherit;
+.small-description {
+  font-size: 1vw;
+  font-weight: 400;
+  margin: 0;
+}
+
+/* LOADING SCREEN */
+
+.loading-screen {
+  width: 100vw;
+  height: 100vh;
+  background-color: #fefffe;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.loading-screen-line {
+  width: 30vw;
+  height: 0.5vh;
+  overflow: hidden;
+  display: flex;
+}
+
+.loading-screen-line-inside {
+  width: 100%;
+  height: 100%;
+  background-color: #010100;
+}
+
+/* NAVIGATION */
+
+.navigation {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 15vh;
+  display: flex;
+  justify-content: space-between;
+  padding: 0 7.5vw;
+  z-index: 10;
+  opacity: 0;
+}
+
+.navigation-left, .navigation-right {
+  width: 50%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 1vw;
+  pointer-events: none;
+}
+
+.navigation-right {
+  justify-content: end;
+}
+
+.navigation-image {
+  height: 2.5vh;
+  width: fit-content;
+  pointer-events: auto;
+  cursor: pointer;
+}
+
+.navigation-button {
+  width: fit-content;
+  height: 5vh;
+  padding: 0 1.5vw;
+  background-color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 999px;
+  color: #111111;
+  cursor: pointer;
+  border: none;
+  pointer-events: auto;
+}
+
+.navigation-title {
+  font-size: 1vw;
+  font-weight: 400;
+  margin: 0;
+}
+
+.navigation-right-menu {
+  width: 5vh;
+  height: 5vh;
+  border-radius: 999px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background-color: white;
+  padding: 0.75vw;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.075);
+  cursor: pointer;
+  border: none;
+  pointer-events: auto;
+}
+
+.navigation-right-menu-line {
+  width: 100%;
+  height: 2px;
+  background-color: #010100;
+}
+
+.navigation-background {
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  right: 0;
+  z-index: 4;
+  backdrop-filter: blur(5px);
+  opacity: 0;
+  pointer-events: none;
+  cursor: pointer;
+}
+
+.navigation-menu {
+  width: 35vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  right: 0;
+  background-color: #fefffe;
+  z-index: 5;
+  padding: 7.5vw;
+  opacity: 0;
+}
+
+.navigation-menu-content {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.menu-button {
+  transition: 0.5s ease;
+  cursor: pointer;
+  height: fit-content;
+  overflow: hidden;
+  position: relative;
+  width: fit-content;
   text-decoration: none;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+.menu-text {
+  font-size: 3vw;
+  font-weight: 400;
+  margin: 0;
+  line-height: 125%;
+  cursor: pointer;
+  color: #010100;
+}
+
+.menu-text-not-active {
+  color: #bbb;
+}
+
+.menu-button span {
+  display: block;
+  transition: 0.75s transform cubic-bezier(0.19, 1, 0.22, 1);
+}
+
+.menu-button span:nth-child(2) {
+  position: absolute;
+}
+
+.menu-button:hover span:nth-child(1) {
+  transform: translateY(-100%);
+}
+
+.menu-button:hover span:nth-child(2) {
+  transform: translateY(-100%);
+}
+
+/* PRIVACY POLYCY */
+
+.privacy-policy {
+  padding: 14vh 7.5vw;
+  height: fit-content;
+  background-color: #fefffe;
+}
+
+.privacy-policy-content {
+  display: flex;
+  flex-direction: column;
+  gap: 5vh;
+}
+
+.privacy-item {
+  display: flex;
+  flex-direction: column;
+  gap: 2.5vh;
+}
+
+@media (max-width: 768px) {
+
+/* TEXTS */
+
+.headline {
+  font-size: 17.5vw;
+}
+
+.subheadline {
+  font-size: 7.5vw;
+}
+
+.headline-container-text h1 {
+  font-size: 5vw;
+}
+
+.small-subheadline {
+  font-size: 7.5vw;
+}
+
+.big-description {
+  font-size: 4vw;
+}
+
+.description {
+  font-size: 3vw;
+}
+
+.small-description {
+  font-size: 3vw;
+}
+
+/* NAVIGATION */
+
+.navigation {
+  height: 20vw;
+  padding: 0 5vw;
+}
+
+.navigation-left, .navigation-right {
+  gap: 2vw;
+}
+
+.navigation-right {
+  justify-content: end;
+}
+
+.navigation-image {
+  height: 7.5vw;
+}
+
+.navigation-button {
+  height: 10vw;
+  padding: 0 4vw;
+}
+
+.navigation-title {
+  font-size: 3vw;
+}
+
+.navigation-right-menu {
+  width: 10vw;
+  height: 10vw;
+  padding: 3vw;
+}
+
+.navigation-right-menu-line {
+  height: 2px;
+}
+
+.navigation-background {
+  width: 100vw;
+  height: 225vw;
+}
+
+.navigation-menu {
+  width: 100vw;
+  height: 225vw;
+  padding: 0 5vw;
+}
+
+.navigation-menu-content {
+  width: 100%;
+  height: 200vw;
+  padding: 30vw 0;
+}
+
+.menu-text {
+  font-size: 10vw;
+}
+
+.menu-text-not-active {
+  color: #bbb;
+}
+
+.menu-button:hover span:nth-child(1) {
+  transform: translateY(0);
+}
+
+.menu-button:hover span:nth-child(2) {
+  transform: translateY(0);
+}
+
+/* PRIVACY POLYCY */
+
+.privacy-policy {
+  padding: 30vw 5vw;
+  height: fit-content;
+  background-color: #fefffe;
+}
+
+.privacy-policy-content {
+  display: flex;
+  flex-direction: column;
+  gap: 10vw;
+}
+
+.privacy-item {
+  display: flex;
+  flex-direction: column;
+  gap: 5vw;
+}
+
 }
