--- a/app/globals.css
+++ b/app/globals.css
@@ -19,24 +19,28 @@ body {
   background-color: #111111;
 }
 
-/* ::-webkit-scrollbar {
-  width: 10px;
-} */
-/* ::-webkit-scrollbar-thumb {
+::-webkit-scrollbar {
+  width: 0px;
+}
+::-webkit-scrollbar-thumb {
   background-color: #010100;
 }
 ::-webkit-scrollbar-track {
   background-color: #fefffe;
-} */
+}
 
 /* COLORS */
 
 .white {
-  color: #fefffe;
+  color: white;
 }
 
 .black {
-  color: #010100;
+  color: #111111;
+}
+
+.blue {
+  color: #5eafff;
 }
 
 .blue-background {
