--- a/app/globals.css
+++ b/app/globals.css
@@ -128,6 +128,7 @@ body {
   align-items: center;
   justify-content: center;
   z-index: 100;
+  background-color: #111111;
 }
 
 .loading-video-content {
