--- a/app/Main/main.css
+++ b/app/Main/main.css
@@ -221,3 +221,70 @@
     padding-bottom: 20vh;
 }
 
+/* 6 */
+
+.six {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    padding: 20vh 0;
+  }
+  
+.six-content {
+    width: 100%;
+    height: 100%;
+}
+  
+.six-slider {
+    height: fit-content;
+}
+
+.six-slider-padding {
+    height: 100%;
+    width: 7.5vw;
+}
+  
+.six-slider-item {
+    width: 40vw;
+    height: 50vh;
+    margin-right: 2vw;
+    counter-increment: gallery-cell;
+    display: flex;
+    border-radius: 15px;
+    background-color: #ffffff25;
+}
+
+/* 7 */
+
+.seven {
+    padding: 0 7.5vw;
+    position: relative;
+    height: fit-content;
+    display: flex;
+    flex-direction: column;
+    gap: 5vh;
+    overflow: hidden;
+}
+
+.seven-content {
+    display: flex;
+    flex-direction: row;
+    gap: 1vw;
+}
+
+.seven-content-item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 20vw;
+    height: 30vh;
+    border-radius: 15px;
+    background-color: #ffffff25;
+}
+
+.seven-content-item-box {
+    display: flex;
+    flex-direction: column;
+    color: white;
+}
+
