--- a/app/globals.css
+++ b/app/globals.css
@@ -127,23 +127,50 @@ body {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
+  width: 100vw;
   height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  z-index: 100;
-  background-color: #111111;
+  z-index: 1000;
+  background-color: black;
 }
 
 .loading-video-content {
-  width: 100%;
-  height: 100%;
+  width: 50%;
+  height: 50%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  position: relative;
+  overflow: hidden;
+}
+
+.loading-video-bottom-fade {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 10vh;
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, black 100%);
+}
+.loading-video-left-fade {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 5vw;
+  height: 100%;
+  background: linear-gradient(to left, rgba(255, 255, 255, 0) 0%, black 100%);
+}
+.loading-video-right-fade {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 5vw;
+  height: 100%;
+  background: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, black 100%);
 }
 
 .loading-video-content-video {
