--- a/app/Main/main.css
+++ b/app/Main/main.css
@@ -288,3 +288,21 @@
     color: white;
 }
 
+/* 8 */
+
+.eight {
+    height: 200vh;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+}
+
+.eight-experience {
+    width: 100%;
+    height: 100vh;
+    position: sticky;
+    top: 0;
+    left: 0;
+    z-index: 0;
+}
