--- a/app/Main/main.css
+++ b/app/Main/main.css
@@ -7,6 +7,16 @@
     background-color: transparent;
 }
 
+.main-experience {
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 5;
+    pointer-events: none;
+}
+
 /* 1 */
 
 .one {
