--- a/app/Main/main.css
+++ b/app/Main/main.css
@@ -96,25 +96,50 @@
 
 .two-content {
     display: flex;
-    flex-direction: row-reverse;
+    flex-direction: row;
     justify-content: space-between;
     width: 100%;
-    height: fit-content;
+    height: 80vh;
     color: white;
     gap: 7.5vw;
-    padding-top: 20vh;
+    padding-top: 0vh;
 }
 
 .two-content-left {
-    width: 100%;
+    width: 50%;
     height: fit-content;
 }
 
 .two-content-right {
-    width: fit-content;
-    height: fit-content;
+    width: 50%;
+    height: 100%;
     display: flex;
-    flex-shrink: 0;
+    flex-direction: row;
+    gap: 0;
+    background-color: aqua;
+    overflow: hidden;
+    position: relative;
+}
+
+.two-marquee {
+    position:relative;
+    margin: 30px;
+    width: 600px;
+    height: 80vh;
+    overflow: hidden;
+}
+
+.two-marquee-item {
+    position: relative;
+    width: 600px;
+    height: 80vh; 
+    background-color: aquamarine;
+}
+
+.two-marquee-item-image {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
 }
 
 /* 3 */
