--- a/app/Main/main.css
+++ b/app/Main/main.css
@@ -88,7 +88,7 @@
     height: fit-content;
     width: 100%;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     position: relative;
     padding: 20vh 7.5vw;
     pointer-events: all;
@@ -101,45 +101,100 @@
     width: 100%;
     height: 80vh;
     color: white;
-    gap: 7.5vw;
+    gap: 0;
     padding-top: 0vh;
 }
 
 .two-content-left {
-    width: 50%;
+    width: 20vw;
     height: fit-content;
 }
 
 .two-content-right {
-    width: 50%;
-    height: 100%;
+    width: 60%;
+    height: 100vh;
     display: flex;
     flex-direction: row;
     gap: 0;
-    background-color: aqua;
     overflow: hidden;
-    position: relative;
+    position: absolute;
+    top: 0;
+    right: 0;
 }
 
-.two-marquee {
-    position:relative;
-    margin: 30px;
-    width: 600px;
-    height: 80vh;
+.two-content-right-content {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: row;
+    transform: rotate(35deg) translateY(-30vh);
+}
+
+.two-carousel {
     overflow: hidden;
+    width: 33%;
+    display: flex;
+    flex-direction: column;
+    height: fit-content;
 }
 
-.two-marquee-item {
-    position: relative;
-    width: 600px;
-    height: 80vh; 
-    background-color: aquamarine;
+.two-row {
+    display: flex;
+    touch-action: pan-x pinch-zoom;
+    height: 150vh;
+    flex-direction: column;
 }
 
-.two-marquee-item-image {
+.two-item {
+    flex: 0 0 50vh;
+    height: 60vh;
+    padding: 2vh 0;
+    cursor: pointer;
+    transition: background-color 0.35s ease;
+}
+
+.two-item-image {
     width: 100%;
     height: 100%;
     object-fit: contain;
+}
+
+.bottom-fade {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 10vh;
+    background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, black 100%);
+    z-index: 1;
+}
+
+.top-fade {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 10vh;
+    background: linear-gradient(to top, rgba(255, 255, 255, 0) 0%, black 100%);
+    z-index: 1;
+}
+.left-fade {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 10vw;
+    height: 100%;
+    background: linear-gradient(to left, rgba(255, 255, 255, 0) 0%, black 100%);
+    z-index: 1;
+}
+.right-fade {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 10vw;
+    height: 100%;
+    background: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, black 100%);
+    z-index: 1;
 }
 
 /* 3 */
