--- a/app/Main/main.css
+++ b/app/Main/main.css
@@ -50,8 +50,10 @@
 
 .one-image {
     width: 100%;
-    height: fit-content;
-    position: relative;
+    height: 70vh;
+    position: absolute;
+    bottom: 0;
+    left: 0;
     transform-style: preserve-3d;
     display: flex;
     justify-content: center;
@@ -59,7 +61,7 @@
 
 .one-image-img {
     width: 100%;
-    height: fit-content;
+    height: 100%;
     object-fit: cover;
     position: absolute;
 }
@@ -88,10 +90,23 @@
     height: fit-content;
     width: 100%;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     position: relative;
-    padding: 20vh 7.5vw;
     pointer-events: all;
+    padding: 15vh 0;
+    gap: 15vh;
+}
+
+.two-border {
+    width: 85vw;
+    height: 1px;
+    background-color: rgba(255, 255, 255, 0.25);
+    align-self: center;
+}
+
+.two-wrapper {
+    display: flex;
+    position: relative;
 }
 
 .two-content {
@@ -102,16 +117,37 @@
     height: 80vh;
     color: white;
     gap: 0;
-    padding-top: 0vh;
+    padding: 0 7.5vw;
 }
 
 .two-content-left {
-    width: 20vw;
-    height: fit-content;
+    width: 35vw;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 5vh;
+}
+
+.two-button {
+    width: 100%;
+    height: 5vh;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 1vw;
+    border-radius: 999px;
+    cursor: pointer;
+    position: relative;
+    z-index: 2;
+    border: none;
+    background-color: rgba(255, 255, 255, 0.05);
+    color: white;
+    box-shadow: inset 0 0 0 0px #fff, inset 0 0 0 calc(1px + 0px) rgba(255, 255, 255, 0.15), 0 0 0 0 #0000;
 }
 
 .two-content-right {
-    width: 60%;
+    width: 52.5%;
     height: 100vh;
     display: flex;
     flex-direction: row;
@@ -127,7 +163,7 @@
     height: 100vh;
     display: flex;
     flex-direction: row;
-    transform: rotate(35deg) translateY(-30vh);
+    transform: rotate(27.5deg) translateY(-30vh) translateX(2.5vw);
 }
 
 .two-carousel {
@@ -147,7 +183,7 @@
 
 .two-item {
     flex: 0 0 50vh;
-    height: 60vh;
+    height: 55vh;
     padding: 2vh 0;
     cursor: pointer;
     transition: background-color 0.35s ease;
@@ -308,7 +344,7 @@
     display: flex;
     width: 100%;
     height: fit-content;
-    text-align: left;
+    text-align: center;
     padding-bottom: 20vh;
 }
 
