--- a/app/Main/accordion.css
+++ b/app/Main/accordion.css
@@ -17,8 +17,7 @@
     align-items: center;
     justify-content: space-between;
     transition: 0.6s ease;
-    border-radius: 15px;
-    background-color: rgba(255, 255, 255, 0.075);
+    border-bottom: 1px solid white;
   }
 
   .accordion:hover {
