--- a/app/Main/accordion.css
+++ b/app/Main/accordion.css
@@ -41,6 +41,11 @@
     border-radius: 50%;
     color: black;
   }
+
+  .accordion-icon-icon {
+    width: 1vw;
+    height: 1vw;
+  }
   
   .rotate {
     transform: rotate(90deg);
@@ -52,6 +57,7 @@
     width: 100%;
     display: flex;
     flex-direction: column;
+
   }
   
   .small-text-accordion {
@@ -62,6 +68,10 @@
     padding-left: 0px;
     padding-right: 0px;
     padding-bottom: 2vw;
+  }
+
+  .accordion-description {
+    padding-top: 2.5vh;
   }
   
   .rotate {
