--- a/app/Main/main.css
+++ b/app/Main/main.css
@@ -447,9 +447,9 @@
 
 .seven {
     padding: 0 7.5vw;
-    padding-top: 15vh;
+    padding-top: 0vh;
     position: relative;
-    height: 300vh;
+    height: 325vh;
     display: flex;
     flex-direction: column;
     gap: 5vh;
@@ -469,6 +469,7 @@
     height: 100%;
     width: 1px;
     background-color: white;
+    margin-top: 15vh;
 }
 
 .seven-content-left {
@@ -477,12 +478,15 @@
     display: flex;
     flex-direction: column;
     gap: 5vh;
+    padding-top: 15vh;
 }
 
 .seven-content-left-imagebox {
     width: 100%;
-    height: 75vh;
+    height: 100vh;
     position: relative;
+    border-radius: 25px;
+    overflow: hidden;
 }
 
 .seven-content-right {
@@ -491,6 +495,10 @@
     left: 0;
     width: 50%;
     height: 100vh;
+    display: flex;
+    flex-direction: column;
+    padding-top: 15vh;
+    gap: 5vh;
 }
 
 /* 8 */
