--- a/app/Main/main.css
+++ b/app/Main/main.css
@@ -43,9 +43,9 @@
 
 .one-content-textbox {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
-    gap: 1vh;
+    gap: 1vw;
 }
 
 .one-image {
@@ -82,6 +82,18 @@
     left: 0;
     width: 100%;
     height: 100vh;
+}
+
+.one-content-typewriter {
+    width: fit-content;
+    height: 11vh;
+    display: flex;
+    position: relative;
+    transition: width 0.3s ease;
+}
+
+.one-content-text-none {
+    display: none;
 }
 
 /* 2 */
@@ -466,9 +478,9 @@
 }
 
 .seven-border {
-    height: 100%;
+    height: 310vh;
     width: 1px;
-    background-color: white;
+    background-color: grey;
     margin-top: 15vh;
 }
 
@@ -504,101 +516,146 @@
 /* 8 */
 
 .eight {
-    padding: 0vh 0vw;
-    height: 275vh;
+    padding: 0vw;
+    height: fit-content;
     position: relative;
     overflow: visible;
-}
-  
-.eight-sticky {
-    position: sticky;
-    top: 0;
-    display: flex;
-    flex-direction: row;
-    height: 100vh; /* h-screen */
-    padding-top: 30vh;
-    overflow: hidden; /* overflow-hidden */
-}
-  
-.eight-sticky-text-contents {
-    position: absolute;
-    top: 15vh;
-    left: 7.5vw;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 2.5vh;
-}
-  
-.eight-sticky-content {
-    display: flex;
-    gap: 2vw;
-}
-  
-.eight-card {
-    width: 40vw;
-    height: 60vh;
-    border-radius: 15px;
-    display: flex;
-    padding: 2vw;
-    background-color: rgba(255, 255, 255, 0.075);
+    padding-bottom: 7.5vh;
 }
 
-.eight-card-content {
+.eight-content {
+    display: flex;
+    flex-direction: column;
+    gap: 5vh;
+    padding: 15vh 0;
+    padding-top: 7.5vh;
+}
+
+.four-slider-content {
+    width: 100%;
+    height: fit-content;
+    display: flex;
+    padding: 5vh 0;
+    position: relative;
+}
+
+.four-slider-overlay {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    backdrop-filter: blur(5px);
+    opacity: 0;
+    transition: opacity 0.25s;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.four-slider-icon {
+    color: white;
+    width: 0.85vw;
+    height: 0.85vw;
+}
+
+.four-slider-content:hover .four-slider-overlay {
+    opacity: 1;
+}
+
+.four-slider {
+    overflow: hidden;
+    letter-spacing: 0;
+    line-height: 1.5;
+    margin: 0;
+    white-space: nowrap;
+    display: flex;
+    flex-wrap: nowrap;
+}
+  
+.four-slider-inside {
+    display: flex;
+    white-space: nowrap;
+    display: flex;
+    flex-wrap: nowrap;
+}
+
+.four-slider-item {
+    height: 7.5vh;
+    width: fit-content;
+    margin-right: 5vw;
+}
+
+.four-slider-item-image {
+    height: 100%;
+    width: fit-content;
+    object-fit: cover;
+    opacity: 1;
+}
+
+.slider-left-fade {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 15vw;
+    height: 100%;
+    background: linear-gradient(to left, rgba(255, 255, 255, 0) 0%, black 100%);
+    z-index: 1;
+}
+.slider-right-fade {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 15vw;
+    height: 100%;
+    background: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, black 100%);
+    z-index: 1;
+}
+ 
+
+/* 9 */
+
+.footer {
+    width: fit-content;
+    width: 100%;
+    display: flex;
+    padding: 15vh 7.5vw;
+    padding-bottom: 5vh;
+}
+
+.footer-content {
     width: 100%;
     height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    gap: 2vw;
+    gap: 10vh;
 }
 
-.eight-card-image {
+.footer-top {
     width: 100%;
-    height: 100%;
-    border-radius: 15px;
-    overflow: hidden;
-}
-
-.eight-card-image-img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-.eight-card-invisible {
-    width: 6.5vw;
-}
-
-/* 9 */
-
-.nine {
-    padding: 10vh 7.5vw;
-    height: fit-content;
-    position: relative;
-    z-index: 3;
-    pointer-events: all;
-}
-  
-.nine-content {
     display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: 100%;
-    gap: 5vh;
+    align-items: center;
+    justify-content: center;
 }
 
-.nine-content-questions {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: 100%;
-    gap: 2.5vh;
-  }
+.footer-title {
+    font-size: 14vw;
+    text-transform: uppercase;
+    font-weight: 600;
+    line-height: 75%;
+    margin: 0;
+}
 
-  .nine-arrow {
-    width: 3vw;
-    height: 2vw;
-    color: black;
-  }
+.footer-bottom {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer-bottom-left, .footer-bottom-right {
+    width: fit-content;
+    display: flex;
+    gap: 2.5vw;
+    color: grey;
+}
