--- a/app/globals.css
+++ b/app/globals.css
@@ -16,14 +16,14 @@ body,
 
 body {
   font-family: "Poppins", sans-serif;
-  background-color: black;
+  background-color: #010101;
 }
 
 ::-webkit-scrollbar {
   width: 0px;
 }
 ::-webkit-scrollbar-thumb {
-  background-color: #010100;
+  background-color: #010101;
 }
 ::-webkit-scrollbar-track {
   background-color: #fefffe;
@@ -65,7 +65,7 @@ body {
 }
 
 .black {
-  color: #111111;
+  color: #010101;
 }
 
 .blue {
@@ -127,7 +127,7 @@ body {
   align-items: center;
   justify-content: center;
   z-index: 1000;
-  background-color: black;
+  background-color: #010101;
 }
 
 .loading-video-content {
@@ -147,7 +147,7 @@ body {
   left: 0;
   width: 100%;
   height: 10vh;
-  background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, black 100%);
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, #010101 100%);
 }
 .loading-video-left-fade {
   position: absolute;
@@ -155,7 +155,7 @@ body {
   left: 0;
   width: 5vw;
   height: 100%;
-  background: linear-gradient(to left, rgba(255, 255, 255, 0) 0%, black 100%);
+  background: linear-gradient(to left, rgba(255, 255, 255, 0) 0%, #010101 100%);
 }
 .loading-video-right-fade {
   position: absolute;
@@ -163,7 +163,7 @@ body {
   right: 0;
   width: 5vw;
   height: 100%;
-  background: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, black 100%);
+  background: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, #010101 100%);
 }
 
 .loading-video-content-video {
@@ -218,7 +218,7 @@ body {
   align-items: center;
   justify-content: center;
   border-radius: 999px;
-  color: #111111;
+  color: #010101;
   cursor: pointer;
   border: none;
   pointer-events: auto;
@@ -248,7 +248,7 @@ body {
 .navigation-right-menu-line {
   width: 100%;
   height: 2px;
-  background-color: #010100;
+  background-color: #010101;
 }
 
 .navigation-background {
@@ -300,7 +300,7 @@ body {
   margin: 0;
   line-height: 125%;
   cursor: pointer;
-  color: #010100;
+  color: #010101;
 }
 
 .menu-text-not-active {
