--- a/app/globals.css
+++ b/app/globals.css
@@ -58,6 +58,15 @@ body {
   height: fit-content;
 }
 
+.experience {
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  pointer-events: none !important;
+  z-index: 5;
+}
+
 /* COLORS */
 
 .white {
