--- a/app/Main/main.css
+++ b/app/Main/main.css
@@ -411,7 +411,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 20vw;
+    width: 100%;
     height: 30vh;
     border-radius: 15px;
     background-color: rgba(255, 255, 255, 0.075);
